# Sola

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  package.json
Assignments/: CMakeLists.txt
Assignments/S3R5/: CMakeLists.txt
Assignments/S3R5/2/: CMakeLists.txt
Assignments/S3R5/2/NRS/: base.html
Assignments/S3R5/2/NRS/1/: 1.vaja.html  10.1.vaja.html  10.2.vaja.html  10.3.vaja.html  10.vaja.html  11.vaja.html  12.vaja.html  16.vaja.html  17.vaja.html  18.vaja.html  2.vaja.html  20.vaja.html  24.vaja.html  3.vaja.html  5.vaja.html
Assignments/S3R5/2/NRS/HTML/: 10.1.vaja.html  10.2.vaja.html  10.3.vaja.html  13.vaja.html  14.vaja.html  15.vaja.html  16.vaja.html  19.vaja.html  25.vaja.html  4.vaja.html  6.vaja.html  7.vaja.html  8.vaja.html  9.vaja.html
Assignments/S3R5/2/NRS/JS/1/: 1.answers.js  1.results.js  1.styles.css  1.vaja.html
Assignments/S3R5/2/UPN - Nekrep/: CMakeLists.txt
Assignments/S3R5/2/UPN - Nekrep/01-CelsiusKelvin/: CMakeLists.txt
Assignments/S3R5/2/UPN - Nekrep/01-CelsiusKelvin/src/: main.cpp
Assignments/S3R5/2/UPN - Nekrep/01/src/: main.cpp
Assignments/S3R5/2/UPN - Nekrep/02-InteraktivniKalkulator/: CMakeLists.txt
Assignments/S3R5/2/UPN - Nekrep/02-InteraktivniKalkulator/src/: main.cpp
Assignments/S3R5/2/UPN - Nekrep/02-Kalkulator/src/: main.cpp
Assignments/S3R5/2/UPN - Nekrep/02-Pravokotnik/: CMakeLists.txt
Assignments/S3R5/2/UPN - Nekrep/02-Pravokotnik/src/: main.cpp
Assignments/S3R5/2/UPN - Nekrep/02-Sestevalnik/: CMakeLists.txt
Assignments/S3R5/2/UPN - Nekrep/02-Sestevalnik/src/: main.cpp
Assignments/S3R5/2/UPN - Nekrep/02-Trikotnik/: CMakeLists.txt
Assignments/S3R5/2/UPN - Nekrep/02-Trikotnik/src/: main.cpp
Assignments/S3R5/2/UPN - Nekrep/03-Kocka2Meta/: CMakeLists.txt
Assignments/S3R5/2/UPN - Nekrep/03-Kocka2Meta/src/: main.cpp
C++/Projekti/Ceasar/: CMakeLists.txt
C++/Projekti/Ceasar/src/: Utils.h
C++/Projekti/CrkeVNizu/: CMakeLists.txt
C++/Projekti/CrkeVNizu/src/: main.cpp
C++/Projekti/NeskoncniPoskusGesla/: CMakeLists.txt
C++/Projekti/NeskoncniPoskusGesla/src/: Utils.cpp  Utils.h  main.cpp
C++/Projekti/RazstavaNiza/: CMakeLists.txt
C++/Projekti/RazstavaNiza/src/: Utils.h  main.cpp
C++/Projekti/StevkeIzpis/src/: main.cpp
CPP/: CMakeLists.txt
CPP/Projekti/Ceasar/: CMakeLists.txt
CPP/Projekti/Ceasar/src/: Utils.h  main.cpp
CPP/Projekti/CrkeVNizu/: CMakeLists.txt
CPP/Projekti/CrkeVNizu/src/: Utils.h  main.cpp
CPP/Projekti/NeskoncniPoskusGesla/: CMakeLists.txt
CPP/Projekti/NeskoncniPoskusGesla/src/: Utils.h  main.cpp
CPP/Projekti/RazstavaNiza/: CMakeLists.txt
CPP/Projekti/RazstavaNiza/src/: Utils.cpp  Utils.h  main.cpp
CPP/Projekti/StevkeIzpis/: CMakeLists.txt
CPP/Projekti/StevkeIzpis/src/: Utils.cpp  Utils.h  main.cpp
CPP/projects/razstavaNizov/src/: razstava.cpp  razstava.h
CPP/src/: Commander.cpp  Commander.h  main.cpp  utils.cpp  utils.h
Projects/S3R5/2/: CMakeLists.txt
Projects/S3R5/2/UPN/: CMakeLists.txt
Projects/S3R5/2/UPN/01/: CMakeLists.txt
Projects/S3R5/2/UPN/01/src/: main.cpp
Projects/S3R5/2/UPN/02/: CMakeLists.txt
Projects/S3R5/2/UPN/02-Kalkulator/: CMakeLists.txt
Projects/S3R5/2/UPN/02-Kalkulator/src/: main.cpp
Projects/S3R5/2/UPN/02-Pravokotnik/src/: main.cpp
Vaja/C++/: CMakeLists.txt
Vaja/C++/Projekti/: CMakeLists.txt
Vaja/C++/Projekti/Ceasar/: CMakeLists.txt
Vaja/C++/Projekti/Ceasar/src/: main.cpp
Vaja/C++/Projekti/CrkeVNizu/: CMakeLists.txt
Vaja/C++/Projekti/CrkeVNizu/src/: Utils.h  main.cpp
Vaja/C++/Projekti/NeskoncniPoskusGesla/: CMakeLists.txt
Vaja/C++/Projekti/NeskoncniPoskusGesla/src/: Utils.h  main.cpp
Vaja/C++/Projekti/RazstavaNiza/: CMakeLists.txt
Vaja/C++/Projekti/RazstavaNiza/src/: Utils.h  main.cpp
Vaja/C++/Projekti/StevkeIzpis/: CMakeLists.txt
Vaja/C++/Projekti/StevkeIzpis/src/: Utils.h  main.cpp
