cmake_minimum_required (VERSION 3.12)
project(CPPCeasar)

include(GNUInstallDirs)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_CXX_STANDARD 17)

set(CPP_CEASAR_HEADERS
  src/Utils.h
)
set(CPP_CEASAR_SOURCES
  src/Utils.cpp
)

set(CPP_CEASAR_EXECUTABLE_HEADERS
  ${CPP_CEASAR_HEADERS}
)
set(CPP_CEASAR_EXECUTABLE_SOURCES
  ${CPP_CEASAR_SOURCES}
  src/main.cpp
)

add_executable(CPPCeasar ${CPP_CEASAR_EXECUTABLE_HEADERS} ${CPP_CEASAR_EXECUTABLE_SOURCES})
