cmake_minimum_required (VERSION 3.12)
project(NeskoncniPoskusGesla)

include(GNUInstallDirs)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_CXX_STANDARD 17)

set(NESKONCNI_POSKUS_GESLA_HEADERS
  src/Utils.h
)
set(NESKONCNI_POSKUS_GESLA_SOURCES
  src/Utils.cpp
)

set(NESKONCNI_POSKUS_GESLA_EXECUTABLE_HEADERS
  ${NESKONCNI_POSKUS_GESLA_HEADERS}
)
set(NESKONCNI_POSKUS_GESLA_EXECUTABLE_SOURCES
  ${NESKONCNI_POSKUS_GESLA_SOURCES}
  src/main.cpp
)

add_executable(NeskoncniPoskusGesla ${NESKONCNI_POSKUS_GESLA_EXECUTABLE_HEADERS} ${NESKONCNI_POSKUS_GESLA_EXECUTABLE_SOURCES})
