cmake_minimum_required (VERSION 3.14)
project(CPPRazstavaNiza)

include(GNUInstallDirs)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_CXX_STANDARD 17)

set(CPP_RAZSTAVA_LINK_LIBRARIES
)

set(CPP_RAZSTAVA_HEADERS
  src/Utils.h
)
set(CPP_RAZSTAVA_SOURCES
  src/Utils.cpp
)

set(CPP_RAZSTAVA_EXECUTABLE_HEADERS
  ${CPP_RAZSTAVA_HEADERS}
)
set(CPP_RAZSTAVA_EXECUTABLE_SOURCES
  ${CPP_RAZSTAVA_SOURCES}
  src/main.cpp
)
set(CPP_RAZSTAVA_EXECUTABLE_LINK_LIBRARIES
  ${CPP_RAZSTAVA_LINK_LIBRARIES}
)

add_executable(CPPRazstavaNiza ${CPP_RAZSTAVA_EXECUTABLE_HEADERS} ${CPP_RAZSTAVA_EXECUTABLE_SOURCES})
target_link_libraries(CPPRazstavaNiza ${CPP_RAZSTAVA_EXECUTABLE_LINK_LIBRARIES})
