cmake_minimum_required (VERSION 3.14)
project(RazstavaNiza)

include(GNUInstallDirs)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_CXX_STANDARD 17)

set(RAZSTAVA_NIZA_HEADERS
  src/Utils.h
)
set(RAZSTAVA_NIZA_SOURCES
  src/Utils.cpp
)

set(RAZSTAVA_NIZA_EXECUTABLE_HEADERS
  ${RAZSTAVA_NIZA_HEADERS}
)
set(RAZSTAVA_NIZA_EXECUTABLE_SOURCES
  ${RAZSTAVA_NIZA_SOURCES}
  src/main.cpp
)

add_executable(RazstavaNiza ${RAZSTAVA_NIZA_EXECUTABLE_HEADERS} ${RAZSTAVA_NIZA_EXECUTABLE_SOURCES})
