project(RazstavaNiza)

set(RAZSTAVA_NIZA_HEADERS
)
set(RAZSTAVA_NIZA_SOURCES
)

set(RAZSTAVA_NIZA_EXECUTABLE_HEADERS
  ${RAZSTAVA_NIZA_HEADERS}
)
set(RAZSTAVA_NIZA_EXECUTABLE_SOURCES
  ${RAZSTAVA_NIZA_SOURCES}
  src/main.cpp
)

add_executable(RazstavaNiza ${RAZSTAVA_NIZA_EXECUTABLE_HEADERS} ${RAZSTAVA_NIZA_EXECUTABLE_SOURCES})
