cmake_minimum_required (VERSION 3.12)
project(StevkeIzpis)

include(GNUInstallDirs)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_CXX_STANDARD 17)

set(STEVKE_IZPIS_HEADERS
  src/Utils.h
)
set(STEVKE_IZPIS_SOURCES
  src/Utils.cpp
)

set(STEVKE_IZPIS_EXECUTABLE_HEADERS
  ${STEVKE_IZPIS_HEADERS}
)
set(STEVKE_IZPIS_EXECUTABLE_SOURCES
  ${STEVKE_IZPIS_SOURCES}
  src/main.cpp
)

add_executable(StevkeIzpis ${STEVKE_IZPIS_EXECUTABLE_HEADERS} ${STEVKE_IZPIS_EXECUTABLE_SOURCES})
