project(StevkeIzpis)

set(STEVKE_IZPIS_HEADERS
)
set(STEVKE_IZPIS_SOURCES
)

set(STEVKE_IZPIS_EXECUTABLE_HEADERS
  ${STEVKE_IZPIS_HEADERS}
)
set(STEVKE_IZPIS_EXECUTABLE_SOURCES
  ${STEVKE_IZPIS_SOURCES}
  src/main.cpp
)

add_executable(StevkeIzpis ${STEVKE_IZPIS_EXECUTABLE_HEADERS} ${STEVKE_IZPIS_EXECUTABLE_SOURCES})
