project(2UPN01CelsiusKelvin)

set(2UPN01_CELCIUSKELVIN_HEADERS
        )
set(2UPN01_CELCIUSKELVIN_SOURCES
        )

set(2UPN01_CELCIUSKELVIN_EXECUTABLE_HEADERS
        ${2UPN01_CELCIUSKELVIN_HEADERS}
        )
set(2UPN01_CELCIUSKELVIN_EXECUTABLE_SOURCES
        ${2UPN01_CELCIUSKELVIN_SOURCES}
        src/main.cpp
        )

add_executable(2UPN01CelsiusKelvin ${2UPN01_CELCIUSKELVIN_EXECUTABLE_HEADERS} ${2UPN01_CELCIUSKELVIN_EXECUTABLE_SOURCES})
