project(2UPN02InteraktivniKalkulator)

set(2UPN02_INTERAKTIVNIKALKULATOR_HEADERS
        )
set(2UPN02_INTERAKTIVNIKALKULATOR_SOURCES
        )

set(2UPN02_INTERAKTIVNIKALKULATOR_EXECUTABLE_HEADERS
        ${2UPN02_INTERAKTIVNIKALKULATOR_HEADERS}
        )
set(2UPN02_INTERAKTIVNIKALKULATOR_EXECUTABLE_SOURCES
        ${2UPN02_INTERAKTIVNIKALKULATOR_SOURCES}
        src/main.cpp
        )

add_executable(2UPN02InteraktivniKalkulator ${2UPN02_INTERAKTIVNIKALKULATOR_EXECUTABLE_HEADERS} ${2UPN02_INTERAKTIVNIKALKULATOR_EXECUTABLE_SOURCES})
