project(2UPN02Sestevalnik)

set(2UPN02_SESTEVALNIK_HEADERS
        )
set(2UPN02_SESTEVALNIK_SOURCES
        )

set(2UPN02_SESTEVALNIK_EXECUTABLE_HEADERS
        ${2UPN02_SESTEVALNIK_HEADERS}
        )
set(2UPN02_SESTEVALNIK_EXECUTABLE_SOURCES
        ${2UPN02_SESTEVALNIK_SOURCES}
        src/main.cpp
        )

add_executable(2UPN02Sestevalnik ${2UPN02_SESTEVALNIK_EXECUTABLE_HEADERS} ${2UPN02_SESTEVALNIK_EXECUTABLE_SOURCES})
