project(2UPN02Trikotnik)

# TODO: Pravilno poimenuj set variables
set(2UPN02_PRAVOKOTNIK_HEADERS
        )
set(2UPN02_PRAVOKOTNIK_SOURCES
        )

set(2UPN02_PRAVOKOTNIK_EXECUTABLE_HEADERS
        ${2UPN02_PRAVOKOTNIK_HEADERS}
        )
set(2UPN02_PRAVOKOTNIK_EXECUTABLE_SOURCES
        ${2UPN02_PRAVOKOTNIK_SOURCES}
        src/main.cpp
        )

add_executable(2UPN02Trikotnik ${2UPN02_PRAVOKOTNIK_EXECUTABLE_HEADERS} ${2UPN02_PRAVOKOTNIK_EXECUTABLE_SOURCES})
