project(2UPN03Kocka2Meta)

set(2UPN03_KOCKA2META_HEADERS
        )
set(2UPN03_KOCKA2META_SOURCES
        )

set(2UPN03_KOCKA2META_EXECUTABLE_HEADERS
        ${2UPN03_KOCKA2META_HEADERS}
        )
set(2UPN03_KOCKA2META_EXECUTABLE_SOURCES
        ${2UPN03_KOCKA2META_SOURCES}
        src/main.cpp
        )

add_executable(2UPN03Kocka2Meta ${2UPN03_KOCKA2META_EXECUTABLE_HEADERS} ${2UPN03_KOCKA2META_EXECUTABLE_SOURCES})
