project(2UPN02Kalkulator)

set(2UPN02_KALKULATOR_HEADERS
        )
set(2UPN02_KALKULATOR_SOURCES
        )

set(2UPN02_KALKULATOR_EXECUTABLE_HEADERS
        ${2UPN02_KALKULATOR_HEADERS}
        )
set(2UPN02_KALKULATOR_EXECUTABLE_SOURCES
        ${2UPN02_KALKULATOR_SOURCES}
        src/main.cpp
        )

add_executable(2UPN02Kalkulator ${2UPN02_KALKULATOR_EXECUTABLE_HEADERS} ${2UPN02_KALKULATOR_EXECUTABLE_SOURCES})
